kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: trading-guide
  labels:
    name: trading-guide
    environment: production
    app: trading-guide
